# sphere_line_intersection

./: ..gitignore.un~  .gitignore  CMakeLists.txt  Makefile  README.md  README.md~  has_intersection.h  main.cpp  main.cpp.autosave  moc_visualization.cpp  my_visualizer.cpp  my_visualizer.h  point.h  practice2  practice2.pro  practice2.pro.user.2.5pre1  run_visualizer.cpp  segment.h  test.cpp
CMake/Modules/: FindGMP.cmake  FindGMP.cmake~
include/: CMakeLists.txt  common.h  has_intersection.cpp  has_intersection.cpp.autosave  point.h  point.h.autosave  segment.h
include/gtest/.svn/: all-wcprops  entries
include/gtest/internal/.svn/: entries
test/: CMakeLists.txt
visualisation/: CMakeLists.txt  my_visualizer.cpp  my_visualizer.h  run_visualizer.cpp
visualizer/: Geometry  Geometry.pro  Makefile  axisview.cpp  exampleclass.cpp  main.cpp  moc_visualization.cpp  random.cpp  vector2d.cpp  vector3d.cpp  view.cpp  visualization.cpp  visualization.h
